# asus_xtion_stereo_calibration

./: .gitignore  CMakeLists.txt  README.md
include/: AsusXtionImageProducer.h  CameraIntrinsicsLoader.hpp
src/: AsusXtionImageProducer.cpp  CameraIntrinsicsLoader.cpp  main.cpp
